--- a/App/Home/style.css
+++ b/App/Home/style.css
@@ -19,3 +19,44 @@ main {
     -ms-user-select: none;
     user-select: none;
 }
+
+#tablonParent{
+    margin-left: -47px;
+    margin-right: -47px;
+    padding-top: 10px;
+}
+
+.list-group {
+    margin-bottom: 20px;
+    padding-left: 0;
+    padding-right: 0;
+}
+.not-found-icon {
+    font-size: 24px;
+    color: #444444;
+}
+.settings-icon {
+    font-size: 20px;
+    color: #777777;
+}
+.navbar-nav > li > a{
+    padding-bottom: 0;
+}
+
+/*Icons sense padding inferior, ja que fa fer la navbar mes gran*/
+.navbar-nav > li > a{
+    padding-bottom: 0;
+}
+
+/*Centrar el header i gestionar elements de dreta i esquerra*/
+.navbar-brand
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    margin:0 auto;
+}
+.navbar-toggle {
+    z-index:3;
+}
