--- a/App/Services/style.css
+++ b/App/Services/style.css
@@ -43,7 +43,29 @@ main {
     font-weight: 500;
 }
 
-.material-icons {
-    font-size: 72px;
+.not-found-icon {
+    font-size: 24px;
     color: #444444;
+}
+.settings-icon {
+    font-size: 20px;
+    color: #777777;
+}
+
+/*Icons sense padding inferior, ja que fa fer la navbar mes gran*/
+.navbar-nav > li > a{
+    padding-bottom: 0;
+}
+
+/*Centrar el header i gestionar elements de dreta i esquerra*/
+.navbar-brand
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    margin:0 auto;
+}
+.navbar-toggle {
+    z-index:3;
 }
