--- a/App/Settings/style.css
+++ b/App/Settings/style.css
@@ -22,3 +22,21 @@ main {
 .material-icons {
     font-size: 20px;
 }
+
+/*Icons sense padding inferior, ja que fa fer la navbar mes gran*/
+.navbar-nav > li > a{
+    padding-bottom: 0;
+}
+
+/*Centrar el header i gestionar elements de dreta i esquerra*/
+.navbar-brand
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    margin:0 auto;
+}
+.navbar-toggle {
+    z-index:3;
+}
