--- a/App/Shortcuts/style.css
+++ b/App/Shortcuts/style.css
@@ -8,48 +8,19 @@ main {
     /*font-family: Arial, Helvetica, sans-serif;*/
     text-align: center;
     margin-top: 50px;
-    display: block;
+    /*display: block;*/
 }
 
 #navbar-brand{
     -moz-user-select: none;
-    -khtml-user-select: none;
     -webkit-user-select: none;
-
     -ms-user-select: none;
+
     user-select: none;
 }
 
-.row-fluid{
-    white-space: nowrap;
-}
-.row-fluid .col-lg-3{
-    display: inline-block;
-}
-
-.demo-card-image.mdl-card {
-     width: 128px;
-     height: 128px;
- }
-
-.demo-card-image > .mdl-card__actions {
-    height: 52px;
-    padding: 16px;
-    background: #f4f4f4;
-}
-.demo-card-image__filename {
-    color: #45444f;
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.not-found-icon {
-    font-size: 24px;
-    color: #444444;
-}
-.settings-icon {
+.material-icons {
     font-size: 20px;
-    color: #777777;
 }
 
 /*Icons sense padding inferior, ja que fa fer la navbar mes gran*/
@@ -68,9 +39,4 @@ main {
 }
 .navbar-toggle {
     z-index:3;
-}
-
-.pageIcon{
-    width: 12px;
-    height: 12px;
 }
