v.1.9: 🔤 Idiomes com l'Alemany (de) i el Francès (fr) corregits. 🆕 Afegits idiomes: Italià (it), Portuguès (pt), Polonès (pl), Neerlandès (nl), Rus (ru). 🆕 Arreglat comandos externs a l'extensió. 🆙 Manteniment de codi: Canvis entre Listener i Manager. Neteja de codi en Listener. Reemplaçament de getJson(); 🆙 Correccions en els _locales i traduccions de menús i internes. 🆙 Correcció del bug en la configuració inicial. Ara la configuració es precarrega localment. 🆕 Afegit botó de Buy me a Coffee.

--- a/App/Donate/style.css
+++ b/App/Donate/style.css
@@ -2,7 +2,6 @@
     font-size: 15px;
     /*margin-top: 40px;*/
 }
-
 main {
     padding: 1em;
     /*font-family: Arial, Helvetica, sans-serif;*/
@@ -10,6 +9,13 @@ main {
     margin-top: 50px;
     display: block;
 }
+
+.alineado{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 /*Fa que la navbar no sigui seleccionable*/
 #navbar-brand{
     -moz-user-select: none;
@@ -39,3 +45,4 @@ main {
 .navbar-toggle {
     z-index:3;
 }
+
