v.1.9.2: 🆙 Actualitzat a Bootstrap 4.1.3. 🆕 Nova pagina de Historial. No està llest. 🆕 Canvis en more.html: 		-Agefit un boto rate me 🆙 Canvis en els menus. Afegit: History. Canviat de Donate.html a More.html 🆙 Canvis en els css: 		-Adaptació a Bootstrap 4.1.3 		-Shared-styles.css 🆙 Canvis en el tema Simplex. 🆙 Canvis en Shortcuts.html. 🆙 Canvis en la estructura del projecte.
🔤 Canvis en la descripció de l'store.

--- a/Resources/css/shared-styles.css
+++ b/Resources/css/shared-styles.css
@@ -10,24 +10,14 @@ main {
     display: block;
 }
 
-.alineado{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
+/*NAVBAR CSS*/
 /*Fa que la navbar no sigui seleccionable*/
 #navbar-brand{
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
-
     -ms-user-select: none;
     user-select: none;
-}
-/*Tamany dels icons*/
-.material-icons {
-    font-size: 20px;
 }
 /*Icons sense padding inferior, ja que fa fer la navbar mes gran*/
 .navbar-nav > li > a{
@@ -42,7 +32,3 @@ main {
     text-align: center;
     margin:0 auto;
 }
-.navbar-toggle {
-    z-index:3;
-}
-
