--- a/App/History/style.css
+++ b/App/History/style.css
@@ -1,5 +1,14 @@
-/*Copyright (C) 2016-2019, Roger Pedrós Villorbina, All rights reserved.*/
+/*Copyright (C) 2016-2020, Roger Pedrós Villorbina, All rights reserved.*/
 
 .custom-card{
     height: 17rem;
 }
+
+.box {
+
+}
+
+.movable {
+    display: block;
+}
+
