v.1.9.6: 🆙 Menos dependencia de Simplex. 🆙 Eliminació de part de Material Desing Lite. 🆙 Actualització a Bootstrap 4.4.1
🆙 Correccio de fallos de diseny.
🆙 Eliminació de Tether.js

🆕 Scoll horitzontal implementat en history.html
🆙 Generació preliminar dels historials i les pestanyes.
🆙 Les urls es formategen correctament en les targetes de history.html

🆙 Reducció de pes del objecte a guardar.
🆙 Millorar onError() i fer-la per a altres tipus de error.
🆕 Afegir acces desde el boto dret (ContextMenu)

🆙 Arreglat path de la icona del browser button

🆕 Preparació inicial de manifest v3
🆙 Canvis i correcció de bugs:
- Canvi de l'entrada Paypal per "mes"
- Implementades traduccions: More, Notificació de guardad, error, i Quota_bytes....
- Actualizació de copyright
- Acces directe desde shortcuts per editar el comando.
- Eliminació de la funcio datapreparation() conflictiva.
- Incorporació de l'icona (!) en taronja indicant error.
- Solucionat el problema en setings.html quan no es marcava la opció guardada de la base de dades.

--- a/App/History/style.css
+++ b/App/History/style.css
@@ -1,4 +1,4 @@
-/*Copyright (C) 2016-2020, Roger Pedrós Villorbina, All rights reserved.*/
+/*Copyright (c) 2016 - 2021. Roger Pedrós Villorbina, All rights reserved.*/
 
 .custom-card{
     height: 17rem;
@@ -12,3 +12,41 @@
     display: block;
 }
 
+
+.custom-body {
+    min-height: 100px;
+    min-width: 170px;
+    margin-right: 7px;
+    margin-left: 7px;
+}
+
+.text-container {
+    padding-top: 1rem;
+
+    max-width: 170px;
+    max-height: 70px;
+    font-size: 13px !important;
+    /* Here's where the line-clamp magic begins. First, we need to hide the content that overflows our desired number of text lines to show */
+    overflow: hidden;
+    /* Then, we use the old implementation of Flexbox on the paragraph and set its direction to be row */
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    /* Finally, we set the desired number of lines we want to show */
+    -webkit-line-clamp: 2;
+
+}
+
+.url-text-container {
+    margin-left: 5px;
+    max-width: 90px;
+    max-height: 20px;
+
+    font-size: 13px !important;
+    /* Here's where the line-clamp magic begins. First, we need to hide the content that overflows our desired number of text lines to show */
+    overflow: hidden;
+    /* Then, we use the old implementation of Flexbox on the paragraph and set its direction to be row */
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    /* Finally, we set the desired number of lines we want to show */
+    -webkit-line-clamp: 1;
+}
