--- a/App/More/style.css
+++ b/App/More/style.css
@@ -1,4 +1,4 @@
-/*Copyright (C) 2016-2020, Roger Pedrós Villorbina, All rights reserved.*/
+/*Copyright (c) 2016 - 2021. Roger Pedrós Villorbina, All rights reserved.*/
 
 .alineado{
  display: flex;
