--- a/App/Shortcuts/style.css
+++ b/App/Shortcuts/style.css
@@ -1,1 +1,1 @@
-/*Copyright (C) 2016-2020, Roger Pedrós Villorbina, All rights reserved.*/
+/*Copyright (c) 2016 - 2021. Roger Pedrós Villorbina, All rights reserved.*/
